# Hangang-Flow

./: .gitignore  BUILD  MODULE.bazel  README.md  bazel-Hangang-Flow  bazel-bin  bazel-out  bazel-testlogs  infra.md  monorepo-conclusion.md  package-lock.json  package.json  pnpm-lock.yaml  spec.md  troubleshooting_report.md
.github/workflows/: ci.yml
apps/admin-web/: BUILD  index.html  package.json  server.js  vite.config.js
apps/admin-web/src/: App.css  App.jsx
apps/exchange-web/: BUILD  index.html  package.json  server.js  vite.config.js
apps/exchange-web/src/: App.css  App.jsx  index.css
apps/market-service/: BUILD  package.json
apps/market-service/src/: index.js
apps/trading-service/: BUILD
apps/trading-service/src/main/java/com/hangangflow/trading/: TradingApplication.java
apps/trading-service/src/main/java/com/hangangflow/trading/config/: AppConfig.java
apps/trading-service/src/main/java/com/hangangflow/trading/domain/order/: Order.java  OrderController.java  OrderRepository.java  OrderRequest.java  OrderService.java  OrderStatus.java  OrderType.java
apps/trading-service/src/main/resources/: application.yml
infra/ansible/: deploy-apps.yml  init-cluster.yml  inventory.ini  setup-argocd.yml  setup-k8s.yml
infra/k8s/: admin-web.yaml  exchange-web.yaml  market-service.yaml  trading-service.yaml
infra/terraform/: main.tf  provider.tf  security_group.tf  terraform.tfstate  terraform.tfstate.backup
